; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-index.c_get_hash_item.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-index.c_get_hash_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item = type { i32, i32, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.item*)* @get_hash_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_hash_item(%struct.item* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.item*, align 8
  store %struct.item* %0, %struct.item** %3, align 8
  %4 = load %struct.item*, %struct.item** %3, align 8
  %5 = getelementptr inbounds %struct.item, %struct.item* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = and i32 %6, 49152
  %8 = icmp eq i32 %7, 49152
  br i1 %8, label %9, label %40

9:                                                ; preds = %1
  %10 = load %struct.item*, %struct.item** %3, align 8
  %11 = getelementptr inbounds %struct.item, %struct.item* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp sge i32 %12, 2
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load %struct.item*, %struct.item** %3, align 8
  %17 = getelementptr inbounds %struct.item, %struct.item* %16, i32 0, i32 2
  %18 = load i64*, i64** %17, align 8
  %19 = load %struct.item*, %struct.item** %3, align 8
  %20 = getelementptr inbounds %struct.item, %struct.item* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = sub nsw i32 %21, 1
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %18, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = shl i64 %25, 32
  %27 = load %struct.item*, %struct.item** %3, align 8
  %28 = getelementptr inbounds %struct.item, %struct.item* %27, i32 0, i32 2
  %29 = load i64*, i64** %28, align 8
  %30 = load %struct.item*, %struct.item** %3, align 8
  %31 = getelementptr inbounds %struct.item, %struct.item* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = sub nsw i32 %32, 2
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i64, i64* %29, i64 %34
  %36 = load i64, i64* %35, align 8
  %37 = trunc i64 %36 to i32
  %38 = zext i32 %37 to i64
  %39 = or i64 %26, %38
  store i64 %39, i64* %2, align 8
  br label %49

40:                                               ; preds = %1
  %41 = load %struct.item*, %struct.item** %3, align 8
  %42 = getelementptr inbounds %struct.item, %struct.item* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = and i32 %43, 49152
  %45 = icmp ne i32 %44, 0
  %46 = xor i1 %45, true
  %47 = zext i1 %46 to i32
  %48 = call i32 @assert(i32 %47)
  store i64 0, i64* %2, align 8
  br label %49

49:                                               ; preds = %40, %9
  %50 = load i64, i64* %2, align 8
  ret i64 %50
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
